# pypi-router

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pypi_router/: config_template.toml  main.py  routing.py  utils.py
