[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pypi-router"
version = "0.1.0"
authors = [
  { name="zhaochow", email="zhaowen04@gmail.com" },
]
description = "Simple package for routing Python packages to specific indexes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "build",
  "simpleindex",
]

[project.urls]
Homepage = "https://github.com/zhaochow/pypi-router"
Issues = "https://github.com/zhaochow/pypi-router/issues"

[project.scripts]
pypi_router = "pypi_router.main:main"

[project.entry-points."simpleindex.routes"]
local_index = "pypi_router.main:LocalIndexRoute"
